@@ -2,8 +2,6 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form col="6">
-    <label name="party"/>
-    <field name="party" colspan="5"/>
     <label name="type"/>
     <field name="type"/>
     <group col="2" colspan="2" id="value">
@@ -24,6 +22,10 @@ this repository contains the full copyright notices and license terms. -->
             xexpand="0" width="25"/>
         <!-- Add here some checkboxes ! -->
     </group>
+    <label name="name"/>
+    <field name="name" colspan="2"/>
+    <label name="party"/>
+    <field name="party" colspan="2"/>
     <separator name="comment" colspan="6"/>
     <field name="comment" colspan="6"/>
 </form>
