@@ -2,7 +2,8 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="party"/>
     <field name="type"/>
     <field name="value"/>
+    <field name="name"/>
+    <field name="party"/>
 </tree>
